# lingua-lore-starter

./: .gitignore  README.md  README.zh.md  package-lock.json  package.json
.github/workflows/: release.yml
announcements/: android.md
apps/desktop/: package.json
apps/desktop/src/: styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/app/: 001_init.sql
apps/desktop/src-tauri/src/: lib.rs  official.rs
apps/desktop/src-tauri/src/commands/: account_commands.rs  mod.rs  settings_commands.rs  story_commands.rs  version_commands.rs  world_commands.rs
apps/desktop/src-tauri/src/deepseek/: client.rs
apps/desktop/src-tauri/src/domain/: mod.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/src/story_runtime/: mod.rs  output_validator.rs  prompt_builder.rs  turn_orchestrator.rs
apps/desktop/src-tauri/src/translation/providers/: youdao.rs
apps/desktop/src-tauri/src/turn_commit/: committer.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/lib/: i18n.ts  languages.ts  selection.ts  tauri.ts  types.ts
apps/desktop/src/pages/: ReaderPage.tsx  SettingsPage.tsx  WorldLibraryPage.tsx
apps/desktop/src/stores/: useAppStore.ts
docs/: README.md  README.zh.md  architecture.md  architecture.zh.md  database.md  database.zh.md  development.md  development.zh.md  llm-runtime.md  llm-runtime.zh.md  prompt-design.md  prompt-design.zh.md  release.md  release.zh.md  runtime.md  runtime.zh.md
