[package]
name = "lingua-lore"
version = "0.1.30"
description = "Immersive role-playing novel engine with independent selection translation"
authors = ["Lingua Lore"]
edition = "2021"

[lib]
name = "lingua_lore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
jni = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.0", features = [] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
urlencoding = "2.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
